--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -7,16 +7,21 @@
   <!-- the classes 'page-header' and 'btn btn-dark' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
-
-  
-    <h1>Hello World!!!</h1>
+    <h1>API Web App</h1>
   </div>
 
-  <p>Click on the button for a surprise.</p>
+  <input class="search" type="text" placeholder="Enter city name">
+  <button type="button" onClick="searchWeather()">Search</button>
 
-  <button onClick="showPicture()" class="btn btn-dark">Click me</button>
+  <div class="error-message"></div>
+  
+<div class="city">
 
-  <div id="image"></div>
+</div>
+
+<div class="temp">
+  
+</div>
   
 </body>
 
