--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -23,5 +23,6 @@
 <!-- then bootstrap -->
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<script>var apikey="<%= process.env.API_KEY %>";</script>
 <!-- then our app's own js file -->
 <script src="js/main.js"></script>
